5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1798_2570.log
== SUBMITION (2019-06-10 15:21:04) 
-- CODE:
from numpy import*
x = array(eval(input("Vetor: ")))

m = sum(x)/size(x)
p1 = 0
for i in range(size(x)):
	if (p1 = 0):
		p1 = abs(x[i] - m)
	elif (p1 > 0):
		p1 = p1 * abs (x[i] - m)
n = size(x)
p = (p1) ** (1/size(x))
print(round(p, 3))
-- EXECUTION TIME:
0.548051
-- ERROR:
  File "/home/codebench/codes/1798/2570/main.py", line 7
    if (p1 = 0):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:21:18) 
-- CODE:
from numpy import*
x = array(eval(input("Vetor: ")))

m = sum(x)/size(x)
p1 = 0
for i in range(size(x)):
	if (p1 = 0):
		p1 = abs(x[i] - m)
	elif (p1 > 0):
		p1 = p1 * abs (x[i] - m)
n = size(x)
p = (p1) ** (1/size(x))
print(round(p, 3))
-- EXECUTION TIME:
0.654947
-- ERROR:
  File "/home/codebench/codes/1798/2570/main.py", line 7
    if (p1 = 0):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:25:51) 
-- CODE:
from numpy import*
x = array(eval(input("Vetor: ")))

m = sum(x)/size(x)
p1 = 0
for i in range(size(x)):
	if (p1 == 0):
		p1 = abs(x[i] - m)
	elif (p1 > 0):
		p1 = p1 * abs (x[i] - m)
n = size(x)
p = (p1) ** (1/size(x))
print(round(p, 3))
-- EXECUTION TIME:
0.863225
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
